force-app/main/default/objects/Contrato_Digital__c/Contrato_Digital__c.object-meta.xml
<CustomObject>
    <description>Contiene la información de los documentos enviados a TuFirma</description>
    <label>Contrato Digital</label>
    <nameField>
        <displayFormat>CTR-{00000}</displayFormat>
        <label>Nombre de Contrato Digital</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contratos Digitales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>