force-app/main/default/objects/Contrato_Digital__c/fields/Contrato_ID__c.field-meta.xml
<CustomField>
    <fullName>Contrato_ID__c</fullName>
    <description>contrato Id de AWS (identificador universal)</description>
    <label>Contrato ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>