force-app/main/default/objects/Contrato_Digital__c/fields/Documento_ID_TuFirma_del__c.field-meta.xml
<CustomField>
    <fullName>Documento_ID_TuFirma_del__c</fullName>
    <description>ID externo de TuFirma</description>
    <label>Documento ID TuFirma</label>
    <type>TextArea</type>
</CustomField>