force-app/main/default/objects/Contrato_Digital__c/fields/Fecha_Envio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Envio__c</fullName>
    <description>Cuándo se envió a firma</description>
    <label>Fecha Envío</label>
    <type>DateTime</type>
</CustomField>