force-app/main/default/objects/Contrato_Digital__c/fields/Fecha_Firma__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Firma__c</fullName>
    <description>Cuándo se completó la firma</description>
    <label>Fecha Firma</label>
    <type>DateTime</type>
</CustomField>