force-app/main/default/objects/Contrato_Digital__c/fields/Firmante_Email__c.field-meta.xml
<CustomField>
    <fullName>Firmante_Email__c</fullName>
    <description>Email del firmante</description>
    <label>Firmante Email</label>
    <type>Email</type>
</CustomField>