force-app/main/default/objects/Contrato_Digital__c/fields/Firmante_Nombre__c.field-meta.xml
<CustomField>
    <fullName>Firmante_Nombre__c</fullName>
    <description>Nombre del firmante</description>
    <label>Firmante Nombre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>