force-app/main/default/objects/Contrato_Digital__c/fields/Firmante_Telefono__c.field-meta.xml
<CustomField>
    <fullName>Firmante_Telefono__c</fullName>
    <label>Firmante Teléfono</label>
    <type>Phone</type>
</CustomField>