force-app/main/default/objects/Contrato_Digital__c/fields/PDF_Firmado_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_Firmado_URL__c</fullName>
    <description>Link al PDF firmado (S3)</description>
    <label>PDF Firmado URL</label>
    <type>Url</type>
</CustomField>