force-app/main/default/objects/Contrato_Digital__c/fields/PDF_Original_URL__c.field-meta.xml
<CustomField>
    <fullName>PDF_Original_URL__c</fullName>
    <description>Link al PDF sin firmar (S3)</description>
    <label>PDF Original URL</label>
    <type>Url</type>
</CustomField>