force-app/main/default/objects/Contrato_Digital__c/fields/URL_Firma__c.field-meta.xml
<CustomField>
    <fullName>URL_Firma__c</fullName>
    <description>Link para que el cliente firme</description>
    <label>URL Firma</label>
    <type>Url</type>
</CustomField>